--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,20 +23,101 @@ on:
       - '**.md'
 
 jobs:
-  build-and-test:
-    name: build and test
+  build-and-test-stable:
+    name: build and test (stable)
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [ubuntu-latest, macos-latest, windows-latest]
+        rust: [stable]
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Install LLVM and Clang (Windows)
+        uses: KyleMayes/install-llvm-action@32c4866ebb71e0949e8833eb49beeebed48532bd
+        if: matrix.os == 'windows-latest'
+        with:
+          version: "11.0"
+          directory: ${{ runner.temp }}/llvm
+
+      - name: Set LIBCLANG_PATH (Windows)
+        run: echo "LIBCLANG_PATH=$((gcm clang).source -replace "clang.exe")" >> $env:GITHUB_ENV
+        if: matrix.os == 'windows-latest'
+
+      - name: Install ${{ matrix.rust }}
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: ${{ matrix.rust }}
+          override: true
+
+      - name: Cache cargo state
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-cargo
+        with:
+          path: |
+            ~/.cargo/registry
+            ~/.cargo/git
+            ~/.cargo/bin
+          key: ${{ matrix.os }}-${{ matrix.rust }}-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}-build
+          restore-keys: |
+            ${{ matrix.os }}-${{ matrix.rust }}-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}-
+            ${{ matrix.os }}-${{ matrix.rust }}-${{ env.cache-name }}-
+            ${{ matrix.os }}-${{ matrix.rust }}-
+            ${{ matrix.os }}-
+
+      - name: Cache target dir
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-target
+        with:
+          path: |
+            target/
+          key: ${{ matrix.os }}-${{ matrix.rust }}-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}-build
+          restore-keys: |
+            ${{ matrix.os }}-${{ matrix.rust }}-${{ env.cache-name }}-${{ hashFiles('**/Cargo.toml') }}-
+            ${{ matrix.os }}-${{ matrix.rust }}-${{ env.cache-name }}-
+            ${{ matrix.os }}-${{ matrix.rust }}-
+            ${{ matrix.os }}-
+
+      - name: Install dashboard frontend
+        run: |
+          git submodule init
+          git submodule update --recursive --remote
+          cd bee-node/src/plugins/dashboard/frontend/
+          npm install
+          npm run build-bee
+
+      - name: Build
+        uses: actions-rs/cargo@v1
+        with:
+          command: build
+          args: --workspace --all-targets --all-features --release
+
+      - name: Test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --workspace --all-targets --all-features --release
+
+      - name: Doc Test
+        uses: actions-rs/cargo@v1
+        with:
+          command: test
+          args: --workspace --doc --all-features --release
+
+  build-and-test-experimental:
+    name: build and test (experimental)
+    needs: build-and-test-stable
     runs-on: ${{ matrix.os }}
     continue-on-error: ${{ matrix.experimental }}
     strategy:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-        rust: [stable]
-        experimental: [false]
-        include:
-          - os: [ubuntu-latest, macos-latest, windows-latest]
-            rust: [nightly, beta]
-            experimental: true 
+        rust: [nightly, beta]
+        experimental: [true]
 
     steps:
       - uses: actions/checkout@v2
@@ -115,7 +196,7 @@ jobs:
           args: --workspace --doc --all-features --release
 
   no_std:
-    needs: build-and-test
+    needs: build-and-test-stable
     runs-on: ubuntu-latest
     strategy:
       matrix:
