--- a/bee-test/Cargo.toml
+++ b/bee-test/Cargo.toml
@@ -14,7 +14,7 @@ homepage = "https://www.iota.org"
 bee-block = { version = "0.1.0", path = "../bee-block", default-features = false }
 bee-ledger = { version = "0.7.0", path = "../bee-ledger/bee-ledger", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../bee-tangle", default-features = false }
-bee-ternary = { version = "0.6.0", default-features = false, features = [ "serde" ] }
+bee-ternary = { version = "1.0.0-alpha.1", default-features = false, features = [ "serde" ] }
 
 bytemuck = { version = "1.9.1", default-features = false }
 primitive-types = { version = "0.11.1", default-features = false, features = [ "serde" ] }
