--- a/bee-ledger/bee-ledger/Cargo.toml
+++ b/bee-ledger/bee-ledger/Cargo.toml
@@ -38,24 +38,4 @@ thiserror = { version = "1.0.31", default-features = false }
 time-helper = { version = "0.1.0", default-features = false }
 tokio = { version = "1.19.2", default-features = false, features = [ "sync", "fs" ], optional = true }
 tokio-stream = { version = "0.1.9", default-features = false, optional = true }
-url = { version = "2.2.2", default-features = false, optional = true }
-
-[features]
-workers = [
-  "bee-runtime",
-  "bee-storage",
-  "bee-tangle",
-  "async-trait",
-  "bytes",
-  "futures",
-  "hashbrown",
-  "iota-crypto",
-  "log",
-  "prefix-hex",
-  "ref-cast",
-  "reqwest",
-  "serde",
-  "tokio",
-  "tokio-stream",
-  "url/serde"
-]
+url = { version = "2.2.2", default-features = false, features = [ "serde" ], optional = true }
