--- a/bee-block/Cargo.toml
+++ b/bee-block/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-block"
-version = "0.1.0"
+version = "1.0.0-beta.1"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Implementation of the IOTA protocol block layouts"
@@ -23,22 +23,22 @@ bee-ternary = { version = "1.0.0-alpha.1", default-features = false, features = 
 
 bech32 = { version = "0.9.0", default-features = false }
 bitflags = { version = "1.3.2", default-features = false }
-bytemuck = { version = "1.9.1", default-features = false }
+bytemuck = { version = "1.10.0", default-features = false }
 derive_more = { version = "0.99.17", default-features = false, features = [ "from", "as_ref", "deref", "deref_mut" ] }
-hashbrown = { version = "0.12.1", default-features = false, features = [ "ahash", "inline-more" ] }
+hashbrown = { version = "0.12.3", default-features = false, features = [ "ahash", "inline-more" ] }
 hex = { version = "0.4.3", default-features = false, features = [ "alloc" ] }
 iota-crypto = { version = "0.13.0", default-features = false, features = [ "ed25519", "blake2b" ] }
 iterator-sorted = { version = "0.1.0", default-features = false }
 packable = { version = "0.5.0", default-features = false, features = [ "serde", "primitive-types" ] }
 prefix-hex = { version = "0.4.0", default-features = false, features = [ "primitive-types" ] }
 primitive-types = { version = "0.11.1", default-features = false, features = [ "serde" ] }
-serde = { version = "1.0.137", default-features = false, optional = true }
+serde = { version = "1.0.139", default-features = false, optional = true }
 serde-big-array = { version = "0.4.1", default-features = false, optional = true }
-serde_json = { version = "1.0.81", default-features = false, features = [ "alloc" ], optional = true }
+serde_json = { version = "1.0.82", default-features = false, features = [ "alloc" ], optional = true }
 thiserror = { version = "1.0.31", default-features = false }
 
 [dev-dependencies]
-bee-test = { version = "0.1.0", path = "../bee-test", default-features = false }
+bee-test = { path = "../bee-test", default-features = false }
 
 num_cpus = { version = "1.13.1", default-features = false }
 
