--- a/bee-test/Cargo.toml
+++ b/bee-test/Cargo.toml
@@ -12,7 +12,7 @@ homepage = "https://www.iota.org"
 
 [dependencies]
 bee-block = { version = "1.0.0-beta.1", path = "../bee-block", default-features = false }
-bee-ledger = { version = "0.7.0", path = "../bee-ledger/bee-ledger", default-features = false }
+bee-ledger-types = { version = "1.0.0-beta.1", path = "../bee-ledger/bee-ledger-types", default-features = false }
 bee-tangle = { version = "0.3.0", path = "../bee-tangle", default-features = false }
 bee-ternary = { version = "1.0.0-alpha.1", default-features = false, features = [ "serde" ] }
 
