--- a/bee-api/bee-rest-api/Cargo.toml
+++ b/bee-api/bee-rest-api/Cargo.toml
@@ -21,7 +21,7 @@ bee-api-types = { version = "1.0.0-beta.7", path = "../bee-api-types", default-f
 bee-block = { version = "1.0.0-beta.7", path = "../../bee-block", default-features = false, features = [ "dto" ] }
 bee-gossip = { version = "1.0.0-beta.2", path = "../../bee-network/bee-gossip", default-features = false }
 bee-ledger = { version = "0.7.0", path = "../../bee-ledger/bee-ledger", default-features = false }
-bee-pow = { version = "1.0.0-beta.1", path = "../../bee-pow", default-features = false }
+bee-pow = { version = "1.0.0", path = "../../bee-pow", default-features = false }
 bee-protocol = { version = "0.2.2", path = "../../bee-protocol/bee-protocol", default-features = false }
 bee-runtime = { version = "1.0.0", path = "../../bee-runtime", default-features = false  }
 bee-storage = { version = "1.0.0", path = "../../bee-storage/bee-storage", default-features = false }
