--- a/bee-protocol/bee-protocol/Cargo.toml
+++ b/bee-protocol/bee-protocol/Cargo.toml
@@ -21,7 +21,7 @@ bee-autopeering = { version = "0.5.0", path = "../../bee-network/bee-autopeering
 bee-block = { version = "1.0.0-beta.7", path = "../../bee-block", default-features = false, features = [ "serde" ] }
 bee-gossip = { version = "1.0.0-beta.2", path = "../../bee-network/bee-gossip", default-features = false, features = [ "full" ] }
 bee-ledger = { version = "0.7.0", path = "../../bee-ledger/bee-ledger", default-features = false }
-bee-pow = { version = "1.0.0-beta.1", default-features = false }
+bee-pow = { version = "1.0.0", path = "../../bee-pow", default-features = false }
 bee-protocol-types = { version = "1.0.0-beta.4", path = "../bee-protocol-types", default-features = false }
 bee-runtime = { version = "1.0.0", path = "../../bee-runtime", default-features = false }
 bee-storage = { version = "1.0.0", path = "../../bee-storage/bee-storage", default-features = false }
