--- a/bee-api/bee-api-types/Cargo.toml
+++ b/bee-api/bee-api-types/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bee-api-types"
-version = "1.0.0-beta.7"
+version = "1.0.0"
 authors = [ "IOTA Stiftung" ]
 edition = "2021"
 description = "Common types required by nodes and clients APIs like bodies, errors, responses and DTOs."
