--- a/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
+++ b/bee-node/bee-plugin/bee-plugin-dashboard/Cargo.toml
@@ -11,7 +11,7 @@ keywords = [ "iota", "tangle", "bee", "plugin", "dashboard" ]
 homepage = "https://www.iota.org"
 
 [dependencies]
-bee-api-types = { version = "1.0.0-beta.7", path = "../../../bee-api/bee-api-types", default-features = false }
+bee-api-types = { version = "1.0.0", path = "../../../bee-api/bee-api-types", default-features = false }
 bee-block = { version = "1.0.0", path = "../../../bee-block", default-features = false }
 bee-gossip = { version = "1.0.0", path = "../../../bee-network/bee-gossip", default-features = false }
 bee-ledger = { version = "0.7.0", path = "../../../bee-ledger/bee-ledger", default-features = false }
