--- a/bee-inx/Cargo.toml
+++ b/bee-inx/Cargo.toml
@@ -20,5 +20,6 @@ packable = { version = "0.6.2", default-features = false }
 
 [dev-dependencies]
 bee-block = { version = "1.0.0", path = "../bee-block", default-features = false, features = [ "inx", "rand" ] }
+dotenvy = { version = "0.15.5", default-features = false }
 
 tokio = { version = "1.20.1", default-features = false, features = [ "macros", "rt-multi-thread" ] }
